--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
       run: yarn install
 
     - name: Run the tests
-      run: yarn test
+      run: yarn test -- --coverage
     
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
