--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,8 +39,20 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        CODECOV_TOKEN: ${{ secrets.CICDWORKFLOWTESTIMPLEMENTATION }}
 
     - name: Build
       run: yarn run build --if-present
+
+    - name: Deploy
+      run: |
+        git config --global user.name $user_name
+        git config --global user.email $user_email
+        git remote set-url origin https://${github_token}@github.com/${repository}
+        npm run deploy
+      env:
+        user_name: 'irenesryan'
+        user_email: 'irene.ryan@users.noreply.github.com'
+        github_token: ${{secrets.ACTIONS_DEPLOY_ACCESS_TOKEN}}
+        repository: ${{github.repository}}
 
